objects/Account_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account_Is__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships - Related To</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships - Related From</relationshipLabel>
        <relationshipName>Account_Relationships_Of</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Back_to_Account__c</fullName>
        <formula>HYPERLINK((&apos;/&apos; +  Account_Is__r.Id ),&apos;Back to Account&apos;, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go Back</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>is Responsible Partner for</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is Supplied by</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is Bill–to Party of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is Payer of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is Subsidiary of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is Customer of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uses Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is End User of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is OEM of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is Consultant of</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Account_Is__r.Name + &quot; &quot; + Text(RelationshipType__c) + &quot; &quot; + Account_Of__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Account Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>